# browser-utils

./: .gitignore  Cargo.toml  flake.nix
history/core/: Cargo.toml
history/core/src/: lib.rs
history/extension/: background.js  manifest.json  options.html  options.js
history/extension-host/: Cargo.toml  manifest.json
history/extension-host/src/: main.rs
